# Ai-Data-QA

./: .gitignore  ARCHITECTURE.md  Instructions.md  PROJECT_MARKET_ANALYSIS.md  README.md  Reference  VALIDATION_REPORT.md  config.yaml  pyproject.toml
ai_data_qa/: cli.py  config.py  errors.py
ai_data_qa/ai/: analyzer.py  client.py  prompts.py
ai_data_qa/api/: server.py
ai_data_qa/bigquery/: client.py  profiler.py  schema_loader.py
ai_data_qa/reports/: report_generator.py
ai_data_qa/scheduler/: __init__.py  models.py  store.py
ai_data_qa/tests_engine/: generator.py  models.py  runner.py  sql_validator.py
ai_data_qa/utils/: logger.py
dashboard/: README.md  package-lock.json  package.json
dashboard/components/: FailedTestsAccordion.tsx  ProfilingMetrics.tsx  TableSummary.tsx  TrendChart.tsx
dashboard/pages/: index.tsx
dashboard/public/reports/: data_quality_report.json  dq_history.json
dashboard/styles/: globals.css
dashboard/types/: report.ts
dashboard/utils/: fetchReports.ts
tests/: test_cli_cache_loader.py  test_config.py  test_generator.py  test_report_generator.py  test_runner.py  test_scheduler_store.py  test_schema_loader.py  test_sql_validator.py  users.sql
